syntax = "proto3";
package ramichain.acl.v1;

import "ramichain/acl/v1/access_definition.proto";

option go_package = "github.com/GGEZLabs/ramichain/x/acl/types";

// AclAuthority defines the AclAuthority message.
message AclAuthority {
  string address = 1;
  string name = 2;
  repeated AccessDefinition access_definitions = 3;
}
